# uidgen

./: README.md  pyproject.toml  uidgen.py
src/bc_uidgen/: uidgen.py
